--- a/styles.css
+++ b/styles.css
@@ -107,3 +107,9 @@ span {
 #count{
     color: #e5e5e5;
 }
+
+@media screen and (max-width : 576px) {
+    .container {
+        border: none;
+    }
+}
